// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
.sx0j9a6 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sx0j9a6:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sx0j9a6[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal600);
  cursor: not-allowed;
}

.sx0j9a6-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sx0j9a6 sx0j9a6-6obnf"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
.sx0j9a6 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sx0j9a6:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sx0j9a6[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal600);
  cursor: not-allowed;
}

.sx0j9a6-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sx0j9a6 sx0j9a6-6obnf"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
